--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >
   <br><br>
   <a href="mailto:huyenvu09@outlook.com">Email</a>
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">Resume</a>
+  <a href="resume.pdf">Resume</a>
   <br><br>
   <a href="https://www.linkedin.com/in/huyen-vu-09/">LinkedIn</a>
   <br><br>
