--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
-title: Huyen Vu
+title: <p align="center"> Huyen Vu </p>
+
 logo: "photo.png"
-description: >
+
+description:
   M.S. Data Science
   <br><br>
+  <p align="center">
   <a href="mailto:huyenvu09@outlook.com">Email</a>
   <br><br>
   <a href="resume.pdf">Resume</a>
@@ -12,3 +15,6 @@ description: >
   <a href="https://github.com/hvu15?tab=repositories">GitHub</a>
   <br><br>
   <a href="https://observablehq.com/@thanhuyen1809?tab=notebooks&type=public">Observables Notebook</a>
+  </p>
+
+theme: jekyll-theme-minimal
