--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
-title: <p align="center"> Huyen Vu </p>
-
+title: Huyen Vu
 logo: "photo.png"
-
 description:
   M.S. Data Science
   <br><br>
-  <p align="center">
   <a href="mailto:huyenvu09@outlook.com">Email</a>
   <br><br>
   <a href="resume.pdf">Resume</a>
@@ -15,6 +12,5 @@ description:
   <a href="https://github.com/hvu15?tab=repositories">GitHub</a>
   <br><br>
   <a href="https://observablehq.com/@thanhuyen1809?tab=notebooks&type=public">Observables Notebook</a>
-  </p>
 
 theme: jekyll-theme-minimal
